# un-official-appwrite-rust-sdk

./: Cargo.toml  README.md
src/: client.rs  enums.rs  error.rs  id.rs  lib.rs  main.rs  permission.rs  query.rs  query_value.rs  realtime.rs  role.rs  upload_progress.rs  utils.rs  value.rs
src/enums/: authentication_factor.rs  authentication_type.rs  browser.rs  compression.rs  credit_card.rs  execution_method.rs  flag.rs  image_format.rs  image_gravity.rs  index_type.rs  messaging_provider_type.rs  mod.rs  name.rs  o_auth_provider.rs  password_hash.rs  relation_mutate.rs  relationship_type.rs  runtime.rs  smtp_encryption.rs
src/models/: algo_argon2.rs  algo_bcrypt.rs  algo_md5.rs  algo_phpass.rs  algo_scrypt.rs  algo_scrypt_modified.rs  algo_sha.rs  attribute_boolean.rs  attribute_datetime.rs  attribute_email.rs  attribute_enum.rs  attribute_float.rs  attribute_integer.rs  attribute_ip.rs  attribute_list.rs  attribute_relationship.rs  attribute_string.rs  attribute_url.rs  bucket.rs  bucket_list.rs  build.rs  collection.rs  collection_list.rs  continent.rs  continent_list.rs  country.rs  country_list.rs  currency.rs  currency_list.rs  database.rs  database_list.rs  deployment.rs  deployment_list.rs  document.rs  document_list.rs  execution.rs  execution_list.rs  file.rs  file_list.rs  function.rs  (+51 more)
src/services/server/: account.rs  avatar.rs  databases.rs  functions.rs  graphql.rs  health.rs  locale.rs  messaging.rs  mod.rs  storage.rs  teams.rs  users.rs
