[package]
name = "unofficial_appwrite"
version = "0.2.3"
edition = "2021"
description = "wrapper on appwrite api -> https://appwrite.io/docs"
license = "MIT"
homepage = "https://github.com/ahmad-olu/un-official-appwrite-rust-sdk"
repository = "https://github.com/ahmad-olu/un-official-appwrite-rust-sdk"
keywords = ["appwrite", "baas", "unofficial", "server"]
category = ["Api binding", "Web programing"]
exclude = ["/src/main.rs"]
authors = ["Ahmad <ahmadolu001@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fn-stream = "0.2.2"
futures-util = "0.3.30"
reqwest = { version = "0.12.9", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "2.0.9"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.2"
